--- a/clase.html
+++ b/clase.html
@@ -11,13 +11,83 @@
      <script src="https://cdn.tailwindcss.com"></script>
      <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-    <main>
-      <section class="home">
-
+<body class="poppins-medium">
+    <main class="bg-[#010313] min-h-screen bg-[url(images/background.png)] bg-no-repeat bg-center ">
+      <div class="flex flex-col justify-center  min-h-screen items-center hidden">
+        <section class="home flex flex-col justify-center items-center gap-10 ">
+       <h1 class="text-8xl text-white anton-regular">
+        ALPHABET CLASH
+       </h1>
+       <p class="text-white">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+       <button class="btn bg-white p-4">Play now</button>
+      </div>
       </section>
+      <!-- play Ground -->
       <section class="play-ground">
+        <div class="flex flex-col justify-center items-center gap-20 pt-20 ">
+            <!-- screen -->
+         <div class="artboard artboard-horizontal phone-6 rounded-2xl border-[#010313cc] bg-[#FFFFFFB3] border-[20px]">
+            <div class="flex justify-center">
+                <p class="bg-[#2F2941] text-white px-6 pb-4 rounded-b-xl">Don't watch keyboard  while playing...</p>
+            </div>
+             <div class="flex justify-center items-center h-full">
+                <p class="text-black text-9xl font-bold">Y</p>
+             </div>
+        </div>
+            <!-- keyborde start  -->
+         <div>
+           <div class="flex justify-center gap-1 my-1 w-full">
+            <kbd class="kbd">q</kbd>
+            <kbd class="kbd">w</kbd>
+            <kbd class="kbd">e</kbd>
+            <kbd class="kbd">r</kbd>
+            <kbd class="kbd">t</kbd>
+            <kbd class="kbd">y</kbd>
+            <kbd class="kbd">u</kbd>
+            <kbd class="kbd">i</kbd>
+            <kbd class="kbd">o</kbd>
+            <kbd class="kbd">p</kbd>
+            </div> 
+            <div class="flex justify-center gap-1 my-1 w-full">
+            <kbd class="kbd">a</kbd>
+            <kbd class="kbd">s</kbd>
+            <kbd class="kbd">d</kbd>
+            <kbd class="kbd">f</kbd>
+            <kbd class="kbd">g</kbd>
+            <kbd class="kbd">h</kbd>
+            <kbd class="kbd">j</kbd>
+            <kbd class="kbd">k</kbd>
+            <kbd class="kbd">l</kbd>
+            </div> 
+            <div class="flex justify-center gap-1 my-1 w-full">
+            <kbd class="kbd">z</kbd>
+            <kbd class="kbd">x</kbd>
+            <kbd class="kbd">c</kbd>
+            <kbd class="kbd">v</kbd>
+            <kbd class="kbd">b</kbd>
+            <kbd class="kbd">n</kbd>
+            <kbd class="kbd">m</kbd>
+            <kbd class="kbd">/</kbd>
+            </div>
+          </div>
+            <!-- keyborde end  -->
 
+            <!-- life score -->
+            <div class="flex justify-between w-3/4 t">
+                <button class="btn bg-purple-400 text-white">
+                    <span>Life</span>
+                    <img src="images/Love.svg" alt="">
+                    <span>1</span>
+
+                </button>
+                <button class="btn bg-purple-700 text-white">
+                    <span>score</span>
+                    <img src="images/Dolar.svg" alt="">
+                    <span>1</span>
+
+                </button>
+            </div>
+          </div>
       </section>
       <section class="score">
         
