finshe all file added commit

--- a/clase.html
+++ b/clase.html
@@ -31,7 +31,7 @@
                 <p class="bg-[#2F2941] text-white px-6 pb-4 rounded-b-xl">Don't watch keyboard  while playing...</p>
             </div>
              <div class="flex justify-center items-center h-full">
-                <p id="current-alpabet" class="text-black text-9xl font-bold uppercase">Y</p>
+                <p id="current-alpabet" class="text-black text-9xl font-bold ">Y</p>
              </div>
         </div>
             <!-- keyborde start  -->
@@ -74,27 +74,28 @@
 
             <!-- life score -->
             <div class="flex justify-between w-3/4 t">
-                <button class="btn bg-purple-400 text-white">
+                <button class="btn bg-purple-500 text-xl text-white">
                     <span>Life</span>
                     <img src="images/Love.svg" alt="">
-                    <span>1</span>
+                    <span id="current-life">5</span>
 
                 </button>
-                <button class="btn bg-purple-700 text-white">
-                    <span>score</span>
+                <button class="btn bg-purple-700 text-xl text-white">
+                    score 
                     <img src="images/Dolar.svg" alt="">
-                    <span>1</span>
+                    <span id="current-score">1</span>
 
                 </button>
             </div>
          </div>
       </section>
-      <section class="score hidden flex flex-col justify-center items-center min-h-screen">
-       <div class="text-white bg-[#FFFFFF33] text-center p-6 rounded-lg space-y-8">
+      <section id="final-score" class="hidden flex flex-col justify-center items-center min-h-screen">
+     <div class="text-white bg-[#FFFFFF33] text-center p-6 rounded-lg space-y-8">
+        <h3 class="text-3xl font-semibold bg-red-600 p-2 rounded-md">Game Over !</h3>
         <h1 class="text-8xl ">
-          <span class="font-extrabold">Score :</span><span>14</span>
+          <span class="font-extrabold">Score :</span><span id="last-score">14</span>
         </h1>
-        <button class="btn bg-white">Play Again</button>
+        <button onclick="Play()" class="btn text-xl bg-white">Play try Again</button>
         <p>Practice will make you Pro </p>
        </div>
       </section>
