font aswam heart and doler icon add

--- a/clase.html
+++ b/clase.html
@@ -76,20 +76,20 @@
             <div class="flex justify-between w-3/4 t">
                 <button class="btn bg-purple-500 text-xl text-white">
                     <span>Life</span>
-                    <img src="images/Love.svg" alt="">
+                    <i class="fa-solid fa-heart-circle-bolt"></i>
                     <span id="current-life">5</span>
 
                 </button>
                 <button class="btn bg-purple-700 text-xl text-white">
                     score 
-                    <img src="images/Dolar.svg" alt="">
+                    <i class="fa-solid fa-circle-dollar-to-slot"></i>
                     <span id="current-score">1</span>
 
                 </button>
             </div>
          </div>
       </section>
-      <section id="final-score" class="hidden flex flex-col justify-center items-center min-h-screen">
+      <section id="final-score" class="flex flex-col justify-center items-center min-h-screen">
      <div class="text-white bg-[#FFFFFF33] text-center p-6 rounded-lg space-y-8">
         <h3 class="text-3xl font-semibold bg-red-600 p-2 rounded-md">Game Over !</h3>
         <h1 class="text-8xl ">
@@ -100,6 +100,7 @@
        </div>
       </section>
     </main>
+    <script src="https://kit.fontawesome.com/6a6c995abd.js" crossorigin="anonymous"></script>
     <script src="script/utilty.js"></script>
     <script src="script/alpha-clase.js"></script>
 </body>
