update class add commit

--- a/clase.html
+++ b/clase.html
@@ -89,14 +89,23 @@
             </div>
          </div>
       </section>
-      <section id="final-score" class="flex flex-col justify-center items-center min-h-screen">
-     <div class="text-white bg-[#FFFFFF33] text-center p-6 rounded-lg space-y-8">
+      <section id="final-score" class="hidden">
+       <div class="flex flex-col justify-center items-center min-h-screen">
+        <div class="text-white bg-[#FFFFFF33] text-center p-6 rounded-lg space-y-8">
         <h3 class="text-3xl font-semibold bg-red-600 p-2 rounded-md">Game Over !</h3>
         <h1 class="text-8xl ">
           <span class="font-extrabold">Score :</span><span id="last-score">14</span>
         </h1>
         <button onclick="Play()" class="btn text-xl bg-white">Play try Again</button>
         <p>Practice will make you Pro </p>
+       </div><div class="text-white bg-[#FFFFFF33] text-center p-6 rounded-lg space-y-8">
+        <h3 class="text-3xl font-semibold bg-red-600 p-2 rounded-md">Game Over !</h3>
+        <h1 class="text-8xl ">
+          <span class="font-extrabold">Score :</span><span id="last-score">14</span>
+        </h1>
+        <button onclick="Play()" class="btn text-xl bg-white">Play try Again</button>
+        <p>Practice will make you Pro </p>
+       </div>
        </div>
       </section>
     </main>
